youfull/objects/Lead_Sub_Status_Config__c.object
<CustomObject>
    <description>Defines which Sub-Statuses can be selected by users manually (i.e. not automatically set).</description>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Lead Sub-Status Config</relationshipLabel>
        <relationshipName>Lead_Sub_Status_Config</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Lead Status field values. Needs to be reconciled with Lead&apos;s Status field if the latter changes!</description>
        <inlineHelpText>Lead Status field values. Needs to be reconciled with Lead&apos;s Status field if the latter changes!</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>Lead Sub_Status__c field values. Needs to be reconciled with Lead&apos;s Sub_Status__c field if the latter changes!</description>
        <inlineHelpText>Lead Sub_Status__c field values. Needs to be reconciled with Lead&apos;s Sub_Status__c field if the latter changes!</inlineHelpText>
        <label>Sub-Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redistributed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Reassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Account Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up/Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolled Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted - No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exists as Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Lead - Appointed by Another</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted - No Response/No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Contacted 14 Days</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Lead Sub-Status Config</label>
    <nameField>
        <displayFormat>LSC-{0}</displayFormat>
        <label>Lead Sub-Status Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Sub-Status Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>